...
    <string name="app_name_offline">Kontalk (offline)</string>
    <string name="app_description">Community-driven instant messaging network</string>
    <string name="service_name">Message Center</string>
    <string name="authenticator_name">Authentication Service</string>
    <string name="sync_service_name">Sync Contacts</string>
    <string name="download_service">Download Service</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="send">Send</string>
    <string name="menu_compose">Compose</string>
    <string name="menu_create_group">Create group</string>
    <string name="menu_delete_all">Delete chats</string>
    <string name="menu_search">Search</string>
...
    <string name="err_validation_server_not_supported">Selected server does not support registration. Please configure another one in Settings screen.</string>
    <string name="err_validation_user_exists"><b>The number you are using is already registered to Kontalk.</b> If you have registered another device, proceeding in this manner will cut it off from Kontalk. If you are registering another device of yours, choose transfer account.</string>
    <string name="text_encrypted">(encrypted)</string>
    <string name="peer_unknown">(unknown)</string>
    <string name="msg_draft_saved">Message saved as draft.</string>
    <string name="send_mime_not_supported">File type not supported.</string>
    <string name="button_validate">Register</string>
    <string name="button_validation_register">Verify</string>
    <string name="button_validation_fallback">Not receiving anything?</string>
    <string name="button_validation_fallback_callerid">Try another way</string>
    <string name="notify_ticker_download_completed">Download completed</string>
    <string name="notify_title_download_completed">Download completed</string>
    <string name="notify_text_download_completed">Attachment download completed</string>
...
    <string name="notify_title_upload_error">Upload error</string>
    <string name="notify_text_upload_error">Attachment upload failed</string>
    <string name="title_invalid_number">Invalid number</string>
    <string name="err_store_message_failed">Unable to store message to outbox.</string>
    <string name="msg_invalid_number">Please insert a valid phone number.</string>
    <string name="msg_invalid_cc">Please select a country.</string>
    <string name="msg_register_confirm_number1">We will verify the phone number:</string>
    <string name="msg_register_confirm_number2">Please double check that the number is correct.</string>
    <string name="title_invalid_code">Invalid code</string>
    <string name="msg_invalid_code">Please insert a valid code.</string>
    <string name="title_nonetwork">No internet connection</string>
    <string name="title_fallback">Having problems?</string>
    <string name="msg_fallback">We\'ll try another way to verify your phone number.</string>
...
    <string name="pref_send_debug_log">Send debug log</string>
    <string name="pref_copy_database">Copy database</string>
    <string name="msg_copy_database_success">Database copied to: %s</string>
    <string name="msg_copy_database_failed">Database copy failed: %s</string>

    <string name="registration_poweredby">Powered by</string>
    <string name="registration_accept_terms_title">Accept service terms?</string>
    <string name="registration_accept_terms_text"><![CDATA[Server at <b>%1$s</b> is requesting to <a href="%2$s">accept terms of service</a>.]]></string>

    <string name="audio_duration_max">%1$s / %2$s</string>

    <string name="pref_service_terms">Service terms</string>

...
    <string name="import_device_invalid_barcode">No valid data found in the barcode.</string>
    <string name="import_device_scan_screen_title">Scan secret code</string>
    <string name="import_device_btn_scan">Scan barcode</string>
    <string name="import_device_btn_input">Input manually</string>
    <string name="import_device_message">Open Kontalk on the other device, choose menu &gt; Settings &gt; Maintenance &gt; Register device. A secret code and a barcode representing it will be displayed.</string>

    <string name="btn_device_overwrite">I lost my old account or device</string>
    <string name="btn_device_import">Transfer account</string>

    <string name="contactinfo_activity_title">Contact info</string>
    <string name="contactinfo_last_seen">last seen %s</string>
    <string name="contactinfo_phone_number">Phone number</string>
    <string name="contactinfo_fingerprint">Fingerprint</string>
...
