...
            android:paddingRight="20dip"
            android:paddingBottom="10dip"
            android:id="@+id/code_validation_intro"
            android:text="@string/code_validation_intro" />

        <EditText
            android:id="@+id/validation_code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:hint="@string/hint_validation_code"
            android:inputType="phone" />

        <Button
            android:id="@+id/send_button"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:onClick="validateCode"
            android:text="@string/button_validation_register" />
    </LinearLayout>

...
