...
                android:layout_height="fill_parent"
                android:paddingBottom="10dip"
                android:gravity="center_horizontal"
                android:text="@string/number_validation_intro1" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_validation_name"
                android:inputType="textPersonName" />

            <LinearLayout
...
                    android:background="@drawable/bg_spinner_left"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:spinnerMode="dialog" />

                <EditText
                    android:id="@+id/phone_number"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_validation_number"
                    android:inputType="phone" />
            </LinearLayout>
...
